[tool.poetry]
name = "Guardian"
version = "3.5.0"
description = "Custom firewall used to create private lobbies for GTA5 Online"
authors = ["TheMythologist <leekaixuan2001@gmail.com>"]
license = "LGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
colorama = "^0.4.6"
pyinstaller = "^5.13.2"
pydivert = "2.1.0"
questionary = "^2.0.1"
tqdm = "^4.66.4"
requests = "^2.32.2"
prsw = "^0.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
pyproject-flake8 = "^6.0.0.post1"
pre-commit = "^3.6.0"
mypy = "^1.8"
types-colorama = "^0.4.15.4"
types-tqdm = "^4.66.0.20240106"
types-requests = "^2.32.0.20240622"
pytest = "^8.0.0"

[tool.poetry.scripts]
build = "guardian.build:build"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501"]

[tool.isort]
profile = "black"
src_paths = ["guardian", "tests"]

[tool.mypy]
platform = "win32"
exclude = ["speed_tests/", "tests/", "build.py"]
strict = true

[[tool.mypy.overrides]]
module = ["pydivert", "prsw"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
